# 705.641-nlp-final-project

./: .env.example  .gitignore  .pylintrc  .ruff.toml  README.md  TRAINING_GUIDE.md  app.py  example_usage.py  gunicorn_config.py  nlp_final_proj_model_training.ipynb  pyproject.toml  quick_train.sh  requirements.txt  run.bat  run.sh  run_production.sh  setup.py  test_inference.py  train_model.py  transformer_model.ipynb
.github/workflows/: ci.yml
scripts/: find_models.py  prepare_data.py  simple_preprocess.py
src/: __init__.py  config.py
src/inference/: __init__.py  predictor.py
src/middleware/: __init__.py  logging.py  rate_limit.py
src/training/: __init__.py  train_bert.py  train_classifier.py
src/utils/: __init__.py  cache.py  response.py  validators.py
static/: app.js  index.html  styles.css
tests/: __init__.py  test_api.py  test_classifier.py  test_config.py  test_response.py  test_validators.py
